--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,23 @@
 </head>
 <body>
 
-  <h1 id="advice-id">Advice #1</h1>
-
-  <h2 id="advice-text">"Advice text goes here"</h2>
+  <main class="card">
+      <h1 id="advice-id"></h1>
+      <div class="text-div">
+        <h2 id="advice-text"></h2>
+      </div>
+      <div class="img"></div>
+      <!-- <img src="./images/pattern-divider-desktop.svg" alt="..."> -->
+  </main> 
+  <div>
+    <button id="btn" class="dice-button"></button>
+  </div>
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script type="module" src="./scripts/app.js"></script>
 </body>
 </html>
